--- a/README.Rmd
+++ b/README.Rmd
@@ -15,9 +15,8 @@ knitr::opts_chunk$set(
 # ctsmTMB <img src='man/figures/logo.png' align="right" height="150" />
 
 <!-- Badges -->
-<!-- [![CRAN status](https://www.r-pkg.org/badges/version/geomtextpath)](https://CRAN.R-project.org/package=geomtextpath) -->
+[![CRAN status](https://www.r-pkg.org/badges/version/ctsmTMB)](https://CRAN.R-project.org/package=ctsmTMB)
 [![R-CMD-check](https://github.com/phillipbvetter/ctsmTMB/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/phillipbvetter/ctsmTMB/actions/workflows/R-CMD-check.yaml)
-<!-- [![metacran downloads](https://cranlogs.r-pkg.org/badges/geomtextpath)](https://cran.r-project.org/package=geomtextpath) -->
 <!-- Package Description -->
 
 # Overview
@@ -85,7 +84,12 @@ The method is typically not useful for model-training with the goal of forecasti
 <!-- Installation -->
 # Installation
 
-You can install the package by copying the command below into `R`.
+The package can be installed from CRAN using
+```{r}
+install.packages("ctsmTMB")
+```
+
+The development version is available on GitHub
 ```{r}
 remotes::install_github(repo="phillipbvetter/ctsmTMB", dependencies=TRUE)
 ```
