--- a/README.Rmd
+++ b/README.Rmd
@@ -80,12 +80,26 @@ The package can be installed from CRAN:
 install.packages("ctsmTMB")
 ```
 
-The development version is available on GitHub:
+The development version is available on GitHub
 ```{r}
 remotes::install_github(repo="phillipbvetter/ctsmTMB", dependencies=TRUE)
 ```
 
+You may experience an issue with a PAT token in which case you can try r-universe instead
+```{r}
+install.packages('ctsmTMB', repos = c('https://phillipbvetter.r-universe.dev'), type="source")
+```
+
+If you encounter problems with a locked folder `00LOCK-ctsmTMB` due to a previously failed installation remove it with the command below before installating
+```{r}
+# Edit the path to match yours!!
+enter.your.own.path <- "/Library/Frameworks/R.framework/Versions/4.5-arm64/Resources/library/00LOCK-ctsmTMB"
+unlink(enter.your.own.path, recursive = TRUE)
+```
+
+
 It is important to note that users must have working C++ compilers to install and use **ctsmTMB**.
+
 
 ## Windows
 
